--- a/iiot/peach/css/style.css
+++ b/iiot/peach/css/style.css
@@ -678,18 +678,18 @@ a.gotop {
   }
 }
 
-.middle-container .event-content .card .store-card {
+.middle-container .event-content .card .tycg-card {
   width: 100%;
-  padding-bottom: 10px;
+  padding: 10px 0;
 }
 
-.middle-container .event-content .card .store-card li {
+.middle-container .event-content .card .tycg-card li {
   float: left;
   width: 33.33%;
-  padding: 5px;
+  padding: 5px 10px;
 }
 
-.middle-container .event-content .card .store-card li a:hover {
+.middle-container .event-content .card .tycg-card li a:hover {
   opacity: .9;
   -webkit-transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
   transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
@@ -697,40 +697,40 @@ a.gotop {
   -webkit-transform: scale(0.95);
 }
 
-.middle-container .event-content .card .store-card li p {
+.middle-container .event-content .card .tycg-card li p {
   text-align: center;
 }
 
-.middle-container .event-content .card .store-card li .store-photo {
+.middle-container .event-content .card .tycg-card li .tycg-photo {
   width: 100%;
   display: block;
 }
 
-.middle-container .event-content .card .store-card li .store-photo img {
+.middle-container .event-content .card .tycg-card li .tycg-photo img {
   width: 100%;
 }
 
 @media all and (max-width: 780px) {
-  .middle-container .event-content .card .store-card li {
+  .middle-container .event-content .card .tycg-card li {
     width: 50%;
   }
-  .middle-container .event-content .card .store-card li p {
+  .middle-container .event-content .card .tycg-card li p {
     min-height: 34px;
   }
 }
 
 @media all and (max-width: 550px) {
-  .middle-container .event-content .card .store-card li {
+  .middle-container .event-content .card .tycg-card li {
     padding: 6px;
   }
 }
 
 @media all and (max-width: 450px) {
-  .middle-container .event-content .card .store-card li p {
+  .middle-container .event-content .card .tycg-card li p {
     font-size: 12px;
     line-height: 16px;
   }
-  .middle-container .event-content .card .store-card li p span {
+  .middle-container .event-content .card .tycg-card li p span {
     display: block;
   }
 }
