--- a/iiot/peach/css/style.scss
+++ b/iiot/peach/css/style.scss
@@ -389,13 +389,13 @@ a.gotop {
           font-size: 18px;
         }
       }
-      .store-card{
+      .tycg-card{
         width: 100%;
-        padding-bottom: 10px;
+        padding: 10px 0;
         li{
           float:left;
           width: 33.33%;
-          padding: 5px;
+          padding: 5px 10px;
           a:hover{
             opacity: .9;
             transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
@@ -403,7 +403,7 @@ a.gotop {
             -webkit-transform: scale(0.95);
           }
           p{ text-align: center;}
-          .store-photo{
+          .tycg-photo{
             width: 100%;
             display: block;
             img{ 
