--- a/iiot/peach/css/style.scss
+++ b/iiot/peach/css/style.scss
@@ -389,12 +389,21 @@ a.gotop {
           font-size: 18px;
         }
       }
+      a.a-an{
+        display: block;
+        transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+        transform: scale(1);
+        &:hover{
+          transform: scale(0.95);
+          opacity: .9;
+        }
+      }
       .tycg-card{
         width: 100%;
         padding: 10px 0;
         li{
           float:left;
-          width: 33.33%;
+          width: 50%;
           padding: 5px 10px;
           a:hover{
             opacity: .9;
@@ -413,12 +422,16 @@ a.gotop {
         }
         @media all and (max-width: 780px) {
           li{
-            width: 50%;
             p{
               min-height: 34px;
             }
           }
         }
+        @media all and (max-width: 600px) {
+          li{
+            width: 100%;
+          }
+        }          
         @media all and (max-width: 550px) {
           li {
             padding: 6px;
@@ -783,6 +796,12 @@ a.gotop {
       .text-remark{
         max-width: 75%;
         margin: 0 auto;
+      }
+      .mob-show {
+      display: block;
+      }
+      .pc-show {
+        display: none;
       }
     }
     .how-box {
