--- a/iiot/peach/css/style.scss
+++ b/iiot/peach/css/style.scss
@@ -818,6 +818,13 @@ a.gotop {
           width: 25%;
           float: left;
           a{
+            p{
+              text-align: center;
+              display: block;
+              font-size: $f-size-s;
+              padding-bottom: 0;
+              color: #555;
+            }
             display: block;
             transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
              transform: scale(1);
