--- a/iiot/peach/css/style.css
+++ b/iiot/peach/css/style.css
@@ -1313,6 +1313,41 @@ a.gotop {
   max-width: 780px;
 }
 
+.privacy-container .main-container {
+  padding-top: 40px;
+  max-width: 1000px;
+  margin: 40px auto;
+}
+
+.privacy-container h3.sub-title2 {
+  text-align: justify;
+  font-size: 16px;
+  font-weight: bold;
+  line-height: 20px;
+  padding-top: 25px;
+}
+
+.privacy-container h4 {
+  text-align: justify;
+  font-size: 15px;
+  padding: 30px 0 15px 0;
+}
+
+.privacy-container p {
+  text-align: justify;
+  font-size: 14px;
+  line-height: 22px;
+}
+
+.privacy-container p a {
+  color: #3e3e3e;
+  text-decoration: underline;
+}
+
+.privacy-container p a:hover {
+  text-decoration: none;
+}
+
 .foorer-content {
   background-color: #ef6079;
   padding: 30px 20px;
