--- a/iiot/peach/css/style.scss
+++ b/iiot/peach/css/style.scss
@@ -701,7 +701,7 @@ a.gotop {
         li{
           padding: 0 25px 10px 0;
           float: left;
-          display: inline-block;
+          display: block;
           a{
             display: block;
             &:hover{
