--- a/iiot/peach/css/style.css
+++ b/iiot/peach/css/style.css
@@ -992,6 +992,26 @@ a.gotop {
   font-weight: normal;
 }
 
+.middle-container .event-content .info .join-btn a {
+  width: 50%;
+  float: left;
+  padding: 10px;
+}
+
+.middle-container .event-content .info .join-btn a:hover {
+  opacity: .9;
+  -webkit-transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+  transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+  transform: scale(0.95);
+  -webkit-transform: scale(0.95);
+}
+
+@media all and (max-width: 600px) {
+  .middle-container .event-content .info .join-btn a {
+    width: 100%;
+  }
+}
+
 @media all and (max-width: 1000px) {
   .middle-container .event-content .info p {
     font-size: 15px;
