--- a/iiot/peach/css/style.scss
+++ b/iiot/peach/css/style.scss
@@ -649,6 +649,24 @@ a.gotop {
         font-size: $f-size-m;
         font-weight: normal;
       }
+      .join-btn{
+        a{ 
+          width: 50%;
+          float: left;
+          padding: 10px;
+          &:hover {
+              opacity: .9;
+              transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+              transform: scale(0.95);
+              -webkit-transform: scale(0.95);
+            }
+        }
+        @media all and (max-width: 600px) {
+          a{ 
+            width: 100%;
+          }
+        }
+      }
       @media all and (max-width: 1000px) {
         p {
           font-size: 15px;
