--- a/iiot/peach/css/style.scss
+++ b/iiot/peach/css/style.scss
@@ -399,6 +399,13 @@ a.gotop {
       text-align: center;
       padding: 0px 0 20px 0;
     }
+    .store-more{ 
+      margin: 0 auto;
+      width: 80%;
+      max-width: 400px;
+      display: block;
+      padding-bottom: 15px;
+    }
     .card {
       padding: 50px 30px 30px 30px;
       border-radius: 20px;
